# SecRAG

./: .gitignore  README.md  alembic.ini  pyproject.toml  sideNote.txt
alembic/: env.py
alembic/versions/: 44496a379dc4_add_unique_constraints.py  6a9e9e114623_initial_tables.py  d0db802c8b3a_add_timezone_to_timestamps.py
implementation/: impl2.md  implementation.md
src/secrag/: main.py
src/secrag/core/: config.py  database.py  init_db.py
src/secrag/graphql/: resolvers.py  schema.py  types.py
src/secrag/ingestion/: cloudtrail_ingest.py  guardduty_ingest.py  vpc_flow_ingest.py  worker.py
src/secrag/models/: cloudtrail.py  guardduty.py  vpc_flow_logs.py
src/secrag/schemas/: cloudtrail.py  guardduty.py  vpc_flow_logs.py
